# intellisense-recursion

./: .gitignore  .vscodeignore  CHANGELOG.md  README.md  esbuild.js  package-lock.json  package.json  spec.md  tsconfig.json
.github/workflows/: build-binaries.yml
.lh/: package.json.json
indexer/: Cargo.toml
indexer/src/: format.rs  index.rs  main.rs  parse.rs  query.rs  serve.rs
memory/: MEMORY.md  feedback_no_commit.md  project_goal.md
scripts/: build-all.sh  prepackage.js
src/: extension.ts  indexManager.ts  sidecar.ts
src/test/: runTest.ts
src/test/fixtures/cpp/: models.h  service.cpp
src/test/fixtures/csharp/: Models.cs  Service.cs
src/test/fixtures/dart/: pubspec.yaml
src/test/fixtures/dart/lib/: models.dart  service.dart
src/test/fixtures/go/: go.mod  models.go  service.go
src/test/fixtures/java/: BaseEntity.java  Service.java  TimestampedEntity.java  UserProfile.java
src/test/fixtures/javascript/: models.js  service.js
src/test/fixtures/python/: models.py  service.py
src/test/fixtures/rust/: Cargo.toml
src/test/fixtures/rust/src/: main.rs  models.rs  service.rs
src/test/fixtures/typescript/: models.ts  service.ts
src/test/integration/: runTest.ts
src/test/integration/suite/: duplication.test.ts  index.ts  inspector-diagnostic.test.ts
src/test/perf/: generate-fixtures.ts  runTest.ts
src/test/perf/suite/: index.ts  stress.test.ts
src/test/suite/: hover.test.ts  index.ts
